# localdoc

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  docker-compose.dev.yml  docker-compose.yml
agent/: go.mod  main.go
backend/: .env.example  Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_use_uuid_columns.py  0003_projects_and_metadata.py  0004_document_versions_and_audit.py  0005_runtime_and_background_jobs.py  0006_devices_and_remote_mirrors.py  0007_device_share_requests.py
backend/app/: __init__.py  main.py
backend/app/api/: documents.py  folders.py  jobs.py  projects.py  search.py  stats.py  sync.py  system.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  background_job.py  device.py  device_share.py  device_share_request.py  document.py  document_audit.py  document_version.py  enrollment_token.py  folder.py  folder_runtime_state.py  project.py  share_file.py  sync_batch.py
backend/app/schemas/: document.py  folder.py  job.py  project.py  stats.py  sync.py  system.py
backend/app/services/: background_jobs.py  document_editor.py  folder_runtime.py  scanner.py  sync_service.py  system_backup.py  watcher.py
backend/tests/: test_layer4_helpers.py  test_scanner.py
docs/: 01-product-spec.md  02-architecture.md  03-implementation-roadmap.md  04-layered-implementation-approach.md  05-layer-4-5-execution-checklist.md  06-thin-agent-central-sync-architecture.md  07-agent-installation.md  (+2 more)
(+78 files in other folders)
